lbdb (0.38) unstable; urgency=low

  * m_evolution: Try to evaluate the location of
    evolution-addressbook-export at runtime, since it is no longer
    available in /usr/bin since evolution 2.30.1.2-3 
    (Closes: #583851, #598380).
  * m_vcf: Apply patch Jamey Sharp to support VCF contacts without real
    name (Closes: #624590).

 -- Roland Rosenfeld <roland@debian.org>  Sat, 25 Jun 2011 15:48:15 +0200

lbdb (0.37+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Build-Depend on libvformat-dev instead of libvformat1-dev
    (Closes: #583073).

 -- Thomas Preud'homme <robotux@celest.fr>  Sun, 05 Jun 2011 21:03:08 +0200

lbdb (0.37) unstable; urgency=low

  * Fix bashisms in m_bbdb (Closes: #530113).
  * Fix query shell functions to catch non-zero exit status in case they
    get invoked in set -e context.  Thanks to martin f. krafft
    <madduck@debian.org> for providing a patch (Closes: #515076).
  * m_evolution: support line breaks and long lines.  Thanks to Jan Larres
    <jan@majutsushi.net> for providing a patch (Closes: #505540).
  * Fix documentation concerning the quotes on lbdbq call (Closes: #542012).
  * Upgrade to Standards-Version 3.8.4 (no changes).

 -- Roland Rosenfeld <roland@debian.org>  Tue, 18 May 2010 20:03:18 +0200

lbdb (0.36) unstable; urgency=low

  * Remove duplicate "See also: mutt" from lbdbq.man (Closes: #441588).
  * Update configure using autconf 2.61.
  * Apply charset conversation patch by Peter Colberg based on code by
    Tobias Schlemmer (Closes: #355678).
  * Remove duplicate declaration of $ignorant (Closes: #480356, #483701).
  * Handle mail addresses in mutt_ldap_query correct. Thanks to Colin
    Watson <cjwatson@debian.org> for providing a patch (Closes: #469288).
  * Mention ldapi URIs in mutt_ldap_query man page (Closes: #422730).
  * Protect "make distclean" by checking whether makefile exists.
  * Upgrade to Standards-Version 3.8.0:
    - Fix Homepage header in control file.